update paths in files njk

--- a/app/index.njk
+++ b/app/index.njk
@@ -13,23 +13,23 @@
 
 <body>
   
-  {% include 'app/module/_header/_header.html' %}
+  {% include 'module/_header/_header.html' %}
 
   <main class="main">
-    {% include 'app/module/_top-slider/_top-slider.html' %}
+    {% include 'module/_top-slider/_top-slider.html' %}
     
-    {% include 'app/module/_categories-info/_categories-info.html' %}
+    {% include 'module/_categories-info/_categories-info.html' %}
 
-    {% include 'app/module/_promo/_promo.html' %}
+    {% include 'module/_promo/_promo.html' %}
 
-    {% include 'app/module/_product/_product.html' %}
+    {% include 'module/_product/_product.html' %}
     
-    {% include 'app/module/_video-fashion/_video-fashion.html' %} 
+    {% include 'module/_video-fashion/_video-fashion.html' %} 
 
-    {% include 'app/module/_blog/_blog.html' %}
+    {% include 'module/_blog/_blog.html' %}
   </main>
   
-  {% include 'app/module/_footer/_footer.html' %}
+  {% include 'module/_footer/_footer.html' %}
 
   <script src="js/main.min.js"></script>
 </body>
