--- a/app/login.njk
+++ b/app/login.njk
@@ -66,13 +66,13 @@
 
   <main class="main">
       
-      {% include 'app/module/_top/_top.html' %}
+      {% include 'module/_top/_top.html' %}
 
-      {% include 'app/module/_login/_login.html' %}
+      {% include 'module/_login/_login.html' %}
   
   </main>
 
-  {% include 'app/module/_footer/_footer.html' %}
+  {% include 'module/_footer/_footer.html' %}
   <script src="js/main.min.js"></script>
 </body>
 
