--- a/app/shop.njk
+++ b/app/shop.njk
@@ -829,7 +829,7 @@
     </section>
   </main>
 
-  {% include 'app/module/_footer/_footer.html' %}
+  {% include 'module/_footer/_footer.html' %}
   <script src="js/main.min.js"></script>
 </body>
 
