--- a/app/404-page.njk
+++ b/app/404-page.njk
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  {% include 'app/module/_header/_header.html' %}
+  {% include 'module/_header/_header.html' %}
 
   <main class="main">
       <section class="page-404">
@@ -32,7 +32,7 @@
       </section>
   </main>
 
-  {% include 'app/module/_footer/_footer.html' %}
+  {% include 'module/_footer/_footer.html' %}
   <script src="js/main.min.js"></script>
 </body>
 
