--- a/app/contacts.njk
+++ b/app/contacts.njk
@@ -144,7 +144,7 @@
       </section>
   </main>
 
-  {% include 'app/module/_footer/_footer.html' %}
+  {% include 'module/_footer/_footer.html' %}
   <script
     src="https://maps.googleapis.com/maps/api/js?key=&AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
     defer></script>
